fix unresoved method